src/compiler/z42.Tests/Fixtures/errors/private_method_access/source.z42
namespace Demo;

class Foo {
    private void Secret() { Console.WriteLine("secret"); }
    public void Public() { this.Secret(); }
}

void Main() {
    var f = new Foo();
    f.Secret();
}
